add checkbox component + demo

--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -1,2 +1,4 @@
 <section>
+  <h1>Checkbox</h1>
+  <checkbox bind-model="vm.checkboxChecked" bind-id="checkbox" label="מסומן"></checkbox>
 </section>
