--- a/demo/client/app/components/demo/demo.scss
+++ b/demo/client/app/components/demo/demo.scss
@@ -1,4 +1,11 @@
 demo section {
   padding: 15px;
-  border-bottom: solid 1px #cccccc;
+  border-bottom: solid 1px #555555;
+}
+demo section textarea {
+  margin-top: 15px;
+  width:100%;
+  direction: ltr;
+  text-align: left;
+  resize: none;
 }
