--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -16,3 +16,13 @@
   <textarea disabled><number-spinner value="vm.numberSpinnerValue" total-value="50" label="ערכים" disabled="vm.numberSpinnerDisabled"></number-spinner></textarea>
   <textarea disabled><number-spinner value="vm.numberSpinnerValue" total-value="50" currency-icon="$" label="ערכים" compact="true" disabled="vm.numberSpinnerDisabled"></number-spinner></textarea>
 </section>
+<section>
+  <h1>modalBox</h1>
+  <span modal-box perfect-scrollbar="false">
+    <button>Open modal-box</button>
+    <modal-box-header>כותרת</modal-box-header>
+    <modal-box-content>
+      <p>תוכן</p>
+    </modal-box-content>
+  </span>
+</section>
