--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -18,11 +18,18 @@
 </section>
 <section>
   <h1>modalBox</h1>
-  <span modal-box perfect-scrollbar="false">
+  <span modal-box>
     <button>Open modal-box</button>
     <modal-box-header>כותרת</modal-box-header>
     <modal-box-content>
       <p>תוכן</p>
     </modal-box-content>
   </span>
+  <textarea disabled rows="8"><span modal-box>
+  <button>Open modal-box</button>
+  <modal-box-header>כותרת</modal-box-header>
+  <modal-box-content>
+    <p>תוכן</p>
+  </modal-box-content>
+</span></textarea>
 </section>
