--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -17,6 +17,14 @@
   <textarea disabled><number-spinner value="vm.numberSpinnerValue" total-value="50" currency-icon="$" label="ערכים" compact="true" disabled="vm.numberSpinnerDisabled"></number-spinner></textarea>
 </section>
 <section>
+  <h1>dialog</h1>
+  <span dialog class="left"><button>שמאל למטה</button><dialog-content>תוכן ההודעה</dialog-content></span>
+  <button dialog class="left top">שמאל למעלה<dialog-content>תוכן ההודעה</dialog-content></button>
+  <button dialog class="">ברירת מחדל<dialog-content>תוכן ההודעה</dialog-content></button>
+  <button dialog class="top">אמצע למעלה<dialog-content>תוכן ההודעה</dialog-content></button>
+  <button dialog class="no-arrow left">שמאל ללא חץ<dialog-content>תוכן ההודעה</dialog-content></button>
+</section>
+<section>
   <h1>modalBox</h1>
   <span modal-box>
     <button>Open modal-box</button>
