dialog code preview

--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -18,11 +18,30 @@
 </section>
 <section>
   <h1>dialog</h1>
-  <span dialog class="left"><button>שמאל למטה</button><dialog-content>תוכן ההודעה</dialog-content></span>
-  <button dialog class="left top">שמאל למעלה<dialog-content>תוכן ההודעה</dialog-content></button>
+  <span dialog class="left">
+    <button>שמאל למטה</button>
+    <dialog-content>תוכן ההודעה</dialog-content>
+  </span>
+  <button dialog class="left top">
+    שמאל למעלה
+    <dialog-content>תוכן ההודעה</dialog-content>
+  </button>
   <button dialog class="">ברירת מחדל<dialog-content>תוכן ההודעה</dialog-content></button>
   <button dialog class="top">אמצע למעלה<dialog-content>תוכן ההודעה</dialog-content></button>
   <button dialog class="no-arrow left">שמאל ללא חץ<dialog-content>תוכן ההודעה</dialog-content></button>
+<textarea disabled rows="4"><span dialog class="left">
+  <button>שמאל למטה</button>
+  <dialog-content>תוכן ההודעה</dialog-content>
+</span>
+</textarea>
+<textarea disabled rows="4">
+<button dialog class="left top">
+  שמאל למעלה
+  <dialog-content>תוכן ההודעה</dialog-content>
+</button></textarea>
+<textarea disabled rows="1"><button dialog class="">ברירת מחדל<dialog-content>תוכן ההודעה</dialog-content></button></textarea>
+<textarea disabled rows="1"><button dialog class="top">אמצע למעלה<dialog-content>תוכן ההודעה</dialog-content></button></textarea>
+<textarea disabled rows="1"><button dialog class="no-arrow left">שמאל ללא חץ<dialog-content>תוכן ההודעה</dialog-content></button></textarea>
 </section>
 <section>
   <h1>modalBox</h1>
