modal box more options

--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -29,23 +29,26 @@
   <button dialog class="">ברירת מחדל<dialog-content>תוכן ההודעה</dialog-content></button>
   <button dialog class="top">אמצע למעלה<dialog-content>תוכן ההודעה</dialog-content></button>
   <button dialog class="no-arrow left">שמאל ללא חץ<dialog-content>תוכן ההודעה</dialog-content></button>
-<textarea disabled rows="4"><span dialog class="left">
+  <textarea disabled rows="4"><span dialog class="left">
   <button>שמאל למטה</button>
   <dialog-content>תוכן ההודעה</dialog-content>
 </span>
 </textarea>
-<textarea disabled rows="4">
+  <textarea disabled rows="4">
 <button dialog class="left top">
   שמאל למעלה
   <dialog-content>תוכן ההודעה</dialog-content>
 </button></textarea>
-<textarea disabled rows="1"><button dialog class="">ברירת מחדל<dialog-content>תוכן ההודעה</dialog-content></button></textarea>
-<textarea disabled rows="1"><button dialog class="top">אמצע למעלה<dialog-content>תוכן ההודעה</dialog-content></button></textarea>
-<textarea disabled rows="1"><button dialog class="no-arrow left">שמאל ללא חץ<dialog-content>תוכן ההודעה</dialog-content></button></textarea>
+  <textarea disabled rows="1"><button dialog class="">ברירת מחדל<dialog-content>תוכן ההודעה</dialog-content></button></textarea>
+  <textarea disabled rows="1"><button dialog class="top">אמצע למעלה<dialog-content>תוכן ההודעה</dialog-content></button></textarea>
+  <textarea disabled rows="1"><button dialog class="no-arrow left">שמאל ללא חץ<dialog-content>תוכן ההודעה</dialog-content></button></textarea>
 </section>
 <section>
   <h1>modalBox</h1>
-  <span modal-box>
+  <input type="checkbox" name="modalBoxIsShown" id="modalBoxIsShown" ng-model="vm.modalBoxIsShown">
+  <label for="modalBoxIsShown">Modal-box is open</label>
+  <br><br>
+  <span modal-box open="vm.modalBoxIsShown">
     <button>Open modal-box</button>
     <modal-box-header>כותרת</modal-box-header>
     <modal-box-content>
@@ -62,3 +65,16 @@
   </modal-box-content>
 </span></textarea>
 </section>
+
+<div style="text-align:center">
+
+  <span dialog class="top left">
+    <button style="width:500px">שמאל למעלה</button>
+    <dialog-content>תוכן ההודעה</dialog-content>
+  </span>
+
+  <span dialog class="top left">
+    <button>שמאל למעלה</button>
+    <dialog-content><p style="width:500px">תוכן ההודעה<p></dialog-content>
+  </span>
+</div>
