--- a/demo/client/app/app.scss
+++ b/demo/client/app/app.scss
@@ -1,6 +1,15 @@
+@import url('https://fonts.googleapis.com/earlyaccess/opensanshebrew.css');
 @import "/assets/ionicons/css/ionicons.min.css";
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans Hebrew', arial, sans-serif;
+  color: #000;
+}
+* {
+  box-sizing: border-box;
+}
 .app {
   height: 100%;
-  font-family: 'arial', sans-serif;
 }
