custom-input icon-class

--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -85,5 +85,5 @@
   <br>
   <br>
   <custom-input type="text" label="תווית" model="vm.customInputModel" icon="₪" icon-class="" description="טקסט עזר לתיאור השדה" placeholder="placeholder"></custom-input>
-  <textarea disabled rows="1"><custom-input type="text" label="תווית" model="vm.customInputModel" icon="₪" description="טקסט עזר לתיאור השדה" placeholder="placeholder"></custom-input></textarea>
+  <textarea disabled rows="1"><custom-input type="text" label="תווית" model="vm.customInputModel" icon="₪" icon-class="" description="טקסט עזר לתיאור השדה" placeholder="placeholder"></custom-input></textarea>
 </section>
