--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -1,7 +1,7 @@
 <section>
   <h1>Checkbox</h1>
-  <checkbox bind-model="vm.checkboxChecked" bind-id="checkbox" label="מסומן"></checkbox>
-  <textarea disabled><checkbox bind-model="vm.checkboxChecked" bind-id="checkbox" label="מסומן"></checkbox></textarea>
+  <checkbox model="vm.checkboxChecked" bind-id="checkbox" label="מסומן"></checkbox>
+  <textarea disabled><checkbox model="vm.checkboxChecked" bind-id="checkbox" label="מסומן"></checkbox></textarea>
 </section>
 
 <section>
@@ -11,11 +11,11 @@
     <label for="numberSpinnerDisabled">Disabled</label>
     <br><br>
   </div>
-  <number-spinner value="vm.numberSpinnerValue" total-value="50" label="ערכים" disabled="vm.numberSpinnerDisabled"></number-spinner>
+  <number-spinner model="vm.numberSpinnerValue" total-value="50" label="ערכים" disabled="vm.numberSpinnerDisabled"></number-spinner>
   <h3>compact mode</h3>
-  <number-spinner value="vm.numberSpinnerValue" total-value="50" currency-icon="$" label="ערכים" compact="true" disabled="vm.numberSpinnerDisabled"></number-spinner>
-  <textarea disabled><number-spinner value="vm.numberSpinnerValue" total-value="50" label="ערכים" disabled="vm.numberSpinnerDisabled"></number-spinner></textarea>
-  <textarea disabled><number-spinner value="vm.numberSpinnerValue" total-value="50" currency-icon="$" label="ערכים" compact="true" disabled="vm.numberSpinnerDisabled"></number-spinner></textarea>
+  <number-spinner model="vm.numberSpinnerValue" total-value="50" currency-icon="$" label="ערכים" compact="true" disabled="vm.numberSpinnerDisabled"></number-spinner>
+  <textarea disabled><number-spinner model="vm.numberSpinnerValue" total-value="50" label="ערכים" disabled="vm.numberSpinnerDisabled"></number-spinner></textarea>
+  <textarea disabled><number-spinner model="vm.numberSpinnerValue" total-value="50" currency-icon="$" label="ערכים" compact="true" disabled="vm.numberSpinnerDisabled"></number-spinner></textarea>
 </section>
 
 <section>
