--- a/lib/custom-input/custom-input.scss
+++ b/lib/custom-input/custom-input.scss
@@ -50,3 +50,19 @@
   font-size: 10px;
   margin-right: 5px;
 }
+
+.custom-input .autocomplete-modal{
+  border: solid 1px #ccc;
+  border-radius: 4px;
+  background: #fff;
+  position: absolute;
+  box-shadow: 1px 1px 5px #ccc;
+  min-width: 190px;
+  min-height: 130px;
+  margin-bottom: 15px;
+  margin-top: -22px;
+}
+
+.custom-input .display{
+  display: block;
+}
