--- a/demo/client/app/components/demo/demo.scss
+++ b/demo/client/app/components/demo/demo.scss
@@ -9,3 +9,12 @@ demo section textarea {
   text-align: left;
   resize: none;
 }
+
+demo .test{
+  font-weight: 500;
+  font-size: 15px;
+  color: black;
+  font-family: "Open Sans", sans-serif !important;
+  text-align: right;
+  display: flex;
+}
