fix isOpen function (dialog & modalBox)

--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -60,7 +60,7 @@
   <input type="checkbox" name="modalBoxIsShown" id="modalBoxIsShown" ng-model="vm.modalBoxIsShown">
   <label for="modalBoxIsShown">Modal-box is open</label>
   <br><br>
-  <span modal-box open="vm.modalBoxIsShown">
+  <span modal-box is-open="vm.modalBoxIsShown">
     <button>Open modal-box</button>
     <modal-box-header>כותרת</modal-box-header>
     <modal-box-content>
