--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -64,8 +64,8 @@
     <button>Open modal-box</button>
     <modal-box-header>כותרת</modal-box-header>
     <modal-box-content>
-        <p style="padding:25px;text-align:center">תוכן</p>
-        <button ng-click="$root.$broadcast('modalBoxClose')">Emit סגירת מודל</button>
+      <p style="padding:25px;text-align:center">תוכן</p>
+      <button ng-click="$root.$broadcast('modalBoxClose')">Emit סגירת מודל</button>
     </modal-box-content>
   </span>
   <textarea disabled rows="9"><span modal-box>
@@ -107,31 +107,31 @@
 <section>
   <h1>customInput autocomplete</h1>
   ng-model:
-  <br> {{vm.customInputModel}}
+  <br> {{vm.autoCompleteModel}}
   <br>
   <br>
-  <custom-input type="text"
+  <custom-input
     bind-id="custom-input-id"
     label="אוטו קומפליט"
     icon-class=""
     model="vm.autoCompleteModel"
     description="טקסט עזר לתיאור השדה"
-    type-input="'autoComplete'"
-    array-items="['שטרן אברהם' ,'עזרא הסופר', 'אריאל שרון']"
+    type="autoComplete"
+    array-items="['שטרן אברהם' ,'עזרא הסופר', 'אריאל שרון', 'משה כהן', 'משה לוי']"
     auto-complete-row="vm.autoCompleteHtml"
-     filter="true" >
+    filter="true" >
   </custom-input>
   <textarea disabled rows="4">
-      <custom-input type="text"
+    <custom-input
       bind-id="custom-input-id"
       label="אוטו קומפליט"
       icon-class=""
       model="vm.autoCompleteModel"
       description="טקסט עזר לתיאור השדה"
-      type-input="'autoComplete'"
+      type="autoComplete"
       array-items="['שטרן אברהם' ,'עזרא הסופר', 'אריאל שרון']"
       auto-complete-row="vm.autoCompleteHtml"
-       filter="true" >
+      filter="true" >
     </custom-input>
   </textarea>
 </section>
