--- a/src/modal-box/modal-box.scss
+++ b/src/modal-box/modal-box.scss
@@ -44,7 +44,7 @@
   font-size: 28px;
   text-align: right;
   padding: 15px 20px;
-  flex: 68px;
+  height: 68px;
 }
 .modal-box-content {
   flex: 1;
@@ -57,6 +57,6 @@
   opacity: .6;
 }
 .modal-box-footer {
-  flex: 60px;
+  height: 60px;
 }
 
