number-spinner css hotfix

--- a/lib/number-spinner/number-spinner.scss
+++ b/lib/number-spinner/number-spinner.scss
@@ -72,6 +72,7 @@ number-spinner .number-spinner.compact {
 number-spinner .number-spinner.compact .number-spinner-compact-controls {
   width: 65px;
   border-left: solid 1px #f3f3f3;
+  white-space: normal;
 }
 number-spinner .number-spinner.compact .number-spinner-compact-controls .number-spinner-button {
   height: 45px;
