datepicker - create directive and place it in custom input

--- a/demo/client/app/app.scss
+++ b/demo/client/app/app.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/earlyaccess/opensanshebrew.css');
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
 
 body {
   margin: 0;
