custom-input  - fix datepicker wife transclude input

--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -150,6 +150,8 @@
       model="vm.datepickerModel"
       description="טקסט עזר לתיאור השדה"
       type="datepicker" >
+      <input
+      ng-model="vm.datepickerModel" input-date>
     </custom-input>
     <textarea disabled rows="4">
       <custom-input
@@ -160,6 +162,7 @@
         description="טקסט עזר לתיאור השדה"
         type="datepicker"
          >
+
       </custom-input>
     </textarea>
   </section>
