add tab-index option on customInput

--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -93,7 +93,7 @@
   <br> {{vm.customInputModel}}
   <br>
   <br>
-  <custom-input type="text" bind-id="custom-input-id" bind-name="" label="תווית" model="vm.customInputModel" icon="₪" icon-class="" description="טקסט עזר לתיאור השדה" placeholder="placeholder"></custom-input>
+  <custom-input type="text" bind-id="custom-input-id" bind-name="" label="תווית" model="vm.customInputModel" icon="₪" icon-class="" description="טקסט עזר לתיאור השדה" placeholder="placeholder" tab-index="2"></custom-input>
   <br>
   <custom-input type="text" bind-id="custom-input-id" label="תווית" icon="$" icon-class="" description="טקסט עזר לתיאור השדה">
     <input type="" style="color:blue;background:aqua;" ng-model="vm.customInputModel" />
