autocomplete key down up

--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -117,10 +117,11 @@
     model="vm.autoCompleteModel"
     description="טקסט עזר לתיאור השדה"
     type="autoComplete"
-    array-items="['שטרן אברהם' ,'עזרא הסופר', 'אריאל שרון', 'משה כהן', 'משה לוי']"
-    auto-complete-row="vm.autoCompleteHtml"
+    array-items="['שטרן אברהם' ,'עזרא הסופר', 'אריאל שרון','שטרן אברהם' ,'עזרא הסופר', 'אריאל שרון', 'משה כהן', 'משה לוי']"
     filter="true" >
   </custom-input>
+  <!--     <!-- auto-complete-row="vm.autoCompleteHtml" -->
+
   <textarea disabled rows="4">
     <custom-input
       bind-id="custom-input-id"
