--- a/lib/custom-input/custom-input.scss
+++ b/lib/custom-input/custom-input.scss
@@ -80,6 +80,8 @@
   cursor: pointer;
   transition: background 0.2s;
 }
+
+.selected-arrow,
 .custom-input .autocomplete .row-autocomplete:hover {
   background: #eeeeee;
 }
