autocomplete fix query

--- a/lib/custom-input/custom-input.scss
+++ b/lib/custom-input/custom-input.scss
@@ -81,7 +81,9 @@
   transition: background 0.2s;
 }
 
-.selected-arrow,
+.selected-arrow{
+  background: #eeeeee;
+}
 .custom-input .autocomplete .row-autocomplete:hover {
   background: #eeeeee;
 }
