--- a/lib/datepicker/datepicker.scss
+++ b/lib/datepicker/datepicker.scss
@@ -1,8 +1,8 @@
 /* container */
 .datepicker .fa-fw{
-  position: absolute !important;
-  left: 9px !important;
-  bottom: 7px !important;
+  position: absolute;
+  left: 9px;
+  bottom: 7px;
 }
 .datepicker .modal-box-container {
   width: 800px;
