input-currency - fix min & max value

--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -83,7 +83,7 @@
   סכום: {{vm.inputCurrencyModel}} ₪
   <br>
   <br>
-  <input ng-model="vm.inputCurrencyModel" input-currency />
+  <input ng-model="vm.inputCurrencyModel" max="500" input-currency />
   <textarea disabled rows="1"><input ng-model="vm.inputCurrencyModel" input-currency /></textarea>
 </section>
 
