--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -1,134 +1,115 @@
-<section>
-  <h1>Checkbox</h1>
-  <checkbox model="vm.checkboxChecked" bind-id="checkbox" label="מסומן"></checkbox>
-  <textarea disabled><checkbox model="vm.checkboxChecked" bind-id="checkbox" label="מסומן"></checkbox></textarea>
-</section>
+<form name ="vm.demoForm">
+  <section>
+    <h1>Checkbox</h1>
+    <checkbox model="vm.checkboxChecked" bind-id="checkbox" label="מסומן"></checkbox>
+    <textarea disabled><checkbox model="vm.checkboxChecked" bind-id="checkbox" label="מסומן"></checkbox></textarea>
+  </section>
 
-<section>
-  <h1>numberSpinner</h1>
-  <div>
-    <input type="checkbox" name="numberSpinnerDisabled" id="numberSpinnerDisabled" ng-model="vm.numberSpinnerDisabled">
-    <label for="numberSpinnerDisabled">Disabled</label>
+  <section>
+    <h1>numberSpinner</h1>
+    <div>
+      <input type="checkbox" name="numberSpinnerDisabled" id="numberSpinnerDisabled" ng-model="vm.numberSpinnerDisabled">
+      <label for="numberSpinnerDisabled">Disabled</label>
+      <br><br>
+    </div>
+    <number-spinner model="vm.numberSpinnerValue" total-value="50" label="ערכים" disabled="vm.numberSpinnerDisabled"></number-spinner>
+    <h3>compact mode</h3>
+    <number-spinner model="vm.numberSpinnerValue" total-value="50" currency-icon="$" label="ערכים" compact="true" disabled="vm.numberSpinnerDisabled"></number-spinner>
+    <textarea disabled><number-spinner model="vm.numberSpinnerValue" total-value="50" label="ערכים" disabled="vm.numberSpinnerDisabled"></number-spinner></textarea>
+    <textarea disabled><number-spinner model="vm.numberSpinnerValue" total-value="50" currency-icon="$" label="ערכים" compact="true" disabled="vm.numberSpinnerDisabled"></number-spinner></textarea>
+  </section>
+
+  <section>
+    <h1>dialog</h1>
+    <input type="checkbox" name="openDialog" id="openDialog" ng-model="vm.openDialog">
+    <label for="openDialog">Dialog is open</label>
+    <br>
+    <br>
+    <span dialog class="left" is-open="vm.openDialog" close-by-click-outside="false">
+      <button>שמאל למטה</button>
+      <dialog-content>תוכן ההודעה</dialog-content>
+    </span>
+    <button dialog class="left top" close-by-click="false" close="vm.closeDialog">
+      שמאל למעלה
+      <dialog-content>תוכן ההודעה <a style="-webkit-appearance:button;-moz-appearance:button;-ms-appearance:button;" ng-click="vm.closeDialog()">X</a></dialog-content>
+    </button>
+    <button dialog class="">ברירת מחדל<dialog-content>תוכן ההודעה</dialog-content></button>
+    <button dialog class="top">אמצע למעלה<dialog-content>תוכן ההודעה</dialog-content></button>
+    <button dialog class="no-arrow right">ימין ללא חץ<dialog-content>תוכן ההודעה</dialog-content></button>
+
+    <textarea disabled rows="4"><span dialog class="left" is-open="vm.openDialog" close-by-click-outside="false">
+      <button>שמאל למטה</button>
+      <dialog-content>תוכן ההודעה</dialog-content>
+    </span></textarea>
+    <textarea disabled rows="4">
+    <button dialog class="left top" close-by-click="false" close="vm.closeDialog">
+      שמאל למעלה
+      <dialog-content>תוכן ההודעה <a style="-webkit-appearance:button;-moz-appearance:button;-ms-appearance:button;" ng-click="vm.closeDialog()">X</a></dialog-content>
+    </button></textarea>
+    <textarea disabled rows="1">
+    <button dialog class="">ברירת מחדל<dialog-content>תוכן ההודעה</dialog-content></button></textarea>
+    <textarea disabled rows="1">
+    <button dialog class="top" >אמצע למעלה<dialog-content>תוכן ההודעה</dialog-content></button></textarea>
+    <textarea disabled rows="1">
+    <button dialog class="no-arrow right" >ימין ללא חץ<dialog-content>תוכן ההודעה</dialog-content></button>
+    </textarea>
+  </section>
+
+  <section>
+    <h1>modalBox</h1>
+    <input type="checkbox" name="modalBoxIsShown" id="modalBoxIsShown" ng-model="vm.modalBoxIsShown">
+    <label for="modalBoxIsShown">Modal-box is open</label>
     <br><br>
-  </div>
-  <number-spinner model="vm.numberSpinnerValue" total-value="50" label="ערכים" disabled="vm.numberSpinnerDisabled"></number-spinner>
-  <h3>compact mode</h3>
-  <number-spinner model="vm.numberSpinnerValue" total-value="50" currency-icon="$" label="ערכים" compact="true" disabled="vm.numberSpinnerDisabled"></number-spinner>
-  <textarea disabled><number-spinner model="vm.numberSpinnerValue" total-value="50" label="ערכים" disabled="vm.numberSpinnerDisabled"></number-spinner></textarea>
-  <textarea disabled><number-spinner model="vm.numberSpinnerValue" total-value="50" currency-icon="$" label="ערכים" compact="true" disabled="vm.numberSpinnerDisabled"></number-spinner></textarea>
-</section>
-
-<section>
-  <h1>dialog</h1>
-  <input type="checkbox" name="openDialog" id="openDialog" ng-model="vm.openDialog">
-  <label for="openDialog">Dialog is open</label>
-  <br>
-  <br>
-  <span dialog class="left" is-open="vm.openDialog" close-by-click-outside="false">
-    <button>שמאל למטה</button>
-    <dialog-content>תוכן ההודעה</dialog-content>
-  </span>
-  <button dialog class="left top" close-by-click="false" close="vm.closeDialog">
-    שמאל למעלה
-    <dialog-content>תוכן ההודעה <a style="-webkit-appearance:button;-moz-appearance:button;-ms-appearance:button;" ng-click="vm.closeDialog()">X</a></dialog-content>
-  </button>
-  <button dialog class="">ברירת מחדל<dialog-content>תוכן ההודעה</dialog-content></button>
-  <button dialog class="top">אמצע למעלה<dialog-content>תוכן ההודעה</dialog-content></button>
-  <button dialog class="no-arrow right">ימין ללא חץ<dialog-content>תוכן ההודעה</dialog-content></button>
-
-  <textarea disabled rows="4"><span dialog class="left" is-open="vm.openDialog" close-by-click-outside="false">
-    <button>שמאל למטה</button>
-    <dialog-content>תוכן ההודעה</dialog-content>
-  </span></textarea>
-  <textarea disabled rows="4">
-  <button dialog class="left top" close-by-click="false" close="vm.closeDialog">
-    שמאל למעלה
-    <dialog-content>תוכן ההודעה <a style="-webkit-appearance:button;-moz-appearance:button;-ms-appearance:button;" ng-click="vm.closeDialog()">X</a></dialog-content>
-  </button></textarea>
-  <textarea disabled rows="1">
-  <button dialog class="">ברירת מחדל<dialog-content>תוכן ההודעה</dialog-content></button></textarea>
-  <textarea disabled rows="1">
-  <button dialog class="top" >אמצע למעלה<dialog-content>תוכן ההודעה</dialog-content></button></textarea>
-  <textarea disabled rows="1">
-  <button dialog class="no-arrow right" >ימין ללא חץ<dialog-content>תוכן ההודעה</dialog-content></button>
-  </textarea>
-
-</section>
-
-<section>
-  <h1>modalBox</h1>
-  <input type="checkbox" name="modalBoxIsShown" id="modalBoxIsShown" ng-model="vm.modalBoxIsShown">
-  <label for="modalBoxIsShown">Modal-box is open</label>
-  <br><br>
-  <span modal-box is-open="vm.modalBoxIsShown" width="{{vm.modalBoxWidth}}">
+    <span modal-box is-open="vm.modalBoxIsShown" width="{{vm.modalBoxWidth}}">
+      <button>Open modal-box</button>
+      <modal-box-header>כותרת</modal-box-header>
+      <modal-box-content>
+        <p style="padding:25px;text-align:center">תוכן</p>
+        <button ng-click="$root.$broadcast('modalBoxClose')">Emit סגירת מודל</button>
+      </modal-box-content>
+    </span>
+    <textarea disabled rows="9"><span modal-box>
     <button>Open modal-box</button>
     <modal-box-header>כותרת</modal-box-header>
     <modal-box-content>
       <p style="padding:25px;text-align:center">תוכן</p>
       <button ng-click="$root.$broadcast('modalBoxClose')">Emit סגירת מודל</button>
     </modal-box-content>
-  </span>
-  <textarea disabled rows="9"><span modal-box>
-  <button>Open modal-box</button>
-  <modal-box-header>כותרת</modal-box-header>
-  <modal-box-content>
-    <p style="padding:25px;text-align:center">תוכן</p>
-    <button ng-click="$root.$broadcast('modalBoxClose')">Emit סגירת מודל</button>
-  </modal-box-content>
-</span></textarea>
-</section>
+  </span></textarea>
+  </section>
 
-<section>
-  <h1>inputCurrency</h1>
-  סכום: {{vm.inputCurrencyModel}} ₪
-  <br>
-  <br>
-  <input ng-model="vm.inputCurrencyModel" max="500" input-currency />
-  <textarea disabled rows="1"><input ng-model="vm.inputCurrencyModel" input-currency /></textarea>
-</section>
+  <section>
+    <h1>inputCurrency</h1>
+    סכום: {{vm.inputCurrencyModel}} ₪
+    <br>
+    <br>
+    <input ng-model="vm.inputCurrencyModel" max="500" input-currency />
+    <textarea disabled rows="1"><input ng-model="vm.inputCurrencyModel" input-currency /></textarea>
+  </section>
 
-<section>
-  <h1>customInput</h1>
-  ng-model:
-  <br> {{vm.customInputModel}}
-  <br>
-  <br>
-  <custom-input type="text" bind-id="custom-input-id" bind-name="" label="תווית" model="vm.customInputModel" icon="₪" icon-class="" description="טקסט עזר לתיאור השדה" placeholder="placeholder" tab-index="2"></custom-input>
-  <br>
-  <custom-input type="text" bind-id="custom-input-id" label="תווית" icon="$" icon-class="" description="טקסט עזר לתיאור השדה">
+  <section>
+    <h1>customInput</h1>
+    ng-model:
+    <br> {{vm.customInputModel}}
+    <br>
+    <br>
+    <custom-input type="text" required="true" bind-id="custom-input-id" bind-name="customInputField" form-field="vm.demoForm.customInputField" label="תווית" model="vm.customInputModel" icon="₪" icon-class="" description="טקסט עזר לתיאור השדה" placeholder="placeholder" tab-index="2"></custom-input>
+    <br>
+    <custom-input type="text" bind-id="custom-input-id" label="תווית" icon="$" icon-class="" description="טקסט עזר לתיאור השדה">
+      <input type="" style="color:blue;background:aqua;" ng-model="vm.customInputModel" />
+    </custom-input>
+    <textarea disabled rows="2"><custom-input type="text" bind-id="custom-input-id" bind-name="" label="תווית" model="vm.customInputModel" icon="₪" icon-class="" description="טקסט עזר לתיאור השדה" placeholder="placeholder"></custom-input></textarea>
+    <textarea disabled rows="4"><custom-input type="text" bind-id="custom-input-id" label="תווית" icon="$" icon-class="" description="טקסט עזר לתיאור השדה">
     <input type="" style="color:blue;background:aqua;" ng-model="vm.customInputModel" />
-  </custom-input>
-  <textarea disabled rows="2"><custom-input type="text" bind-id="custom-input-id" bind-name="" label="תווית" model="vm.customInputModel" icon="₪" icon-class="" description="טקסט עזר לתיאור השדה" placeholder="placeholder"></custom-input></textarea>
-  <textarea disabled rows="4"><custom-input type="text" bind-id="custom-input-id" label="תווית" icon="$" icon-class="" description="טקסט עזר לתיאור השדה">
-  <input type="" style="color:blue;background:aqua;" ng-model="vm.customInputModel" />
-</custom-input></textarea>
-</section>
+  </custom-input></textarea>
+  </section>
 
-<section>
-  <h1>customInput autocomplete</h1>
-  ng-model:
-  <br> {{vm.autoCompleteModel}}
-  <br>
-  <br>
-  <custom-input
-    bind-id="custom-input-id"
-    label="אוטו קומפליט"
-    icon-class=""
-    model="vm.autoCompleteModel"
-    description="טקסט עזר לתיאור השדה"
-    type="autoComplete"
-    array-items="[{name:'שטרן אברהם'
-  },
-  {  name:
-    'עזרא הסופר'
-    } ]"
-   filter="true"
-   prop-item-selected="'name'"
-   auto-complete-row="vm.autoCompleteHtml">
-  </custom-input>
-  <!--     <!-- auto-complete-row="vm.autoCompleteHtml" -->
-
-  <textarea disabled rows="4">
+  <section>
+    <h1>customInput autocomplete</h1>
+    ng-model:
+    <br> {{vm.autoCompleteModel}}
+    <br>
+    <br>
     <custom-input
       bind-id="custom-input-id"
       label="אוטו קומפליט"
@@ -136,53 +117,65 @@
       model="vm.autoCompleteModel"
       description="טקסט עזר לתיאור השדה"
       type="autoComplete"
-      array-items="[{name:'שטרן אברהם' },{'עזרא הסופר' name: } ]"
-      auto-complete-row="vm.autoCompleteHtml"
-      filter="true" >
+      array-items="[{name:'שטרן אברהם' }, { name: 'עזרא הסופר' } ]"
+      filter="true"
+      prop-item-selected="'name'"
+      auto-complete-row="vm.autoCompleteHtml">
     </custom-input>
-  </textarea>
-</section>
+    <!--     <!-- auto-complete-row="vm.autoCompleteHtml" -->
 
-
-<section ng-init="vm.datepickerModel = ''">
-    <h1>customInput autocomplete</h1>
-    ng-model:
-    <br> {{vm.datepickerModel}}
-    <br>
-    <br>
-    <custom-input
-      bind-id="datepicker-id"
-      label="דייט פיקר"
-      icon-class=""
-      model="vm.datepickerModel"
-      description="טקסט עזר לתיאור השדה"
-      type="datepicker" >
-      <input
-      ng-model="vm.datepickerModel" input-date>
-    </custom-input>
     <textarea disabled rows="4">
+      <custom-input
+        bind-id="custom-input-id"
+        label="אוטו קומפליט"
+        icon-class=""
+        model="vm.autoCompleteModel"
+        description="טקסט עזר לתיאור השדה"
+        type="autoComplete"
+        array-items="[{name:'שטרן אברהם' },{'עזרא הסופר' name: } ]"
+        auto-complete-row="vm.autoCompleteHtml"
+        filter="true" >
+      </custom-input>
+    </textarea>
+  </section>
+
+  <section ng-init="vm.datepickerModel = ''">
+      <h1>customInput autocomplete</h1>
+      ng-model:
+      <br> {{vm.datepickerModel}}
+      <br>
+      <br>
       <custom-input
         bind-id="datepicker-id"
         label="דייט פיקר"
         icon-class=""
         model="vm.datepickerModel"
         description="טקסט עזר לתיאור השדה"
-        type="datepicker"
-         >
-
+        type="datepicker" >
+        <input
+        ng-model="vm.datepickerModel" input-date>
       </custom-input>
-    </textarea>
+      <textarea disabled rows="4">
+        <custom-input
+          bind-id="datepicker-id"
+          label="דייט פיקר"
+          icon-class=""
+          model="vm.datepickerModel"
+          description="טקסט עזר לתיאור השדה"
+          type="datepicker">
+        </custom-input>
+      </textarea>
+    </section>
+
+    <section>
+    <h1>expInput</h1>
+    <div style="width:180px;margin-right:150px;margin-bottom:50px;">
+      <exp-input month-model="vm.expInput.month" year-model="vm.expInput.year"></exp-input>
+    </div>
+    <div style="width:180px;margin-right:150px;margin-bottom:50px;">
+      <exp-input month-model="vm.expInput.month" year-model="vm.expInput.year" datepicker="false"></exp-input>
+    </div>
+    <textarea disabled rows="2"><exp-input month-model="vm.expInput.month" year-model="vm.expInput.year"></exp-input></textarea>
+    <textarea disabled rows="2"> <exp-input month-model="vm.expInput.month" year-model="vm.expInput.year" datepicker="false"></exp-input></textarea>
   </section>
-
-
-  <section>
-  <h1>expInput</h1>
-  <div style="width:180px;margin-right:150px;margin-bottom:50px;">
-    <exp-input month-model="vm.expInput.month" year-model="vm.expInput.year"></exp-input>
-  </div>
-  <div style="width:180px;margin-right:150px;margin-bottom:50px;">
-    <exp-input month-model="vm.expInput.month" year-model="vm.expInput.year" datepicker="false"></exp-input>
-  </div>
-  <textarea disabled rows="2"><exp-input month-model="vm.expInput.month" year-model="vm.expInput.year"></exp-input></textarea>
-  <textarea disabled rows="2"> <exp-input month-model="vm.expInput.month" year-model="vm.expInput.year" datepicker="false"></exp-input></textarea>
-</section>
+</form>
