custom-input pending

--- a/lib/custom-input/custom-input.scss
+++ b/lib/custom-input/custom-input.scss
@@ -1,11 +1,3 @@
-.custom-input {
-  position: relative;
-  display: inline-block;
-}
-.custom-input .input-container {
-  position: relative;
-  display: inline-block;
-}
 @supports (width: fit-content) {
   .custom-input .input-container {
     display: block;
@@ -13,55 +5,75 @@
   }
 }
 
-.custom-input input {
-  display: block;
-  border: solid 1px rgb(217, 217, 217);
-  border-radius: 5px;
-  padding: 8px 15px;
-  color: #000000;
-  outline: none;
-  transition: box-shadow .2s;
-}
-.custom-input input:focus {
-  box-shadow: 1px 0 7px rgba(0, 0, 0, 0.1);
-}
-.custom-input label {
-  font-size: 12px;
-  display: block;
-  margin-right:5px;
-  line-height: 25px;
-  color: rgb(127, 127, 127);
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  cursor: pointer;
-}
-.custom-input .icon {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  width: 30px;
+.custom-input {
+  position: relative;
   display: inline-block;
-  margin-right: 5px;
-  text-align: right;
-  font-size: 17px;
-  line-height: 32px;
-}
-.custom-input .description {
-  color: rgb(191, 191, 191);
-  font-weight: 400;
-  font-size: 10px;
-  margin-right: 5px;
-}
-.custom-input .display {
-  display: block;
-}
-.custom-input .validation {
-  position: absolute;
-  left: 10px;
-  top: 0;
-  line-height: 25px;
+
+  .input-container {
+    position: relative;
+    display: inline-block;
+  }
+
+  input {
+    display: block;
+    border: solid 1px rgb(217, 217, 217);
+    border-radius: 5px;
+    padding: 8px 15px;
+    color: #000000;
+    outline: none;
+    transition: box-shadow .2s;
+  }
+  input:focus {
+    box-shadow: 1px 0 7px rgba(0, 0, 0, 0.1);
+  }
+  label {
+    font-size: 12px;
+    display: block;
+    margin-right:5px;
+    line-height: 25px;
+    color: rgb(127, 127, 127);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: pointer;
+  }
+  .icon {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 30px;
+    display: inline-block;
+    margin-right: 5px;
+    text-align: right;
+    font-size: 17px;
+    line-height: 32px;
+  }
+  .description {
+    color: rgb(191, 191, 191);
+    font-weight: 400;
+    font-size: 10px;
+    margin-right: 5px;
+  }
+  .display {
+    display: block;
+  }
+  .validation {
+    position: absolute;
+    left: 10px;
+    top: 0;
+    line-height: 25px;
+
+    .tooltip.pending,
+    .tooltip:hover.pending {
+      cursor: default;
+
+      .tooltip:hover.pending .tooltip-wrap {
+        opacity: 0;
+        z-index: -1;
+      }
+    }
+  }
 }
 
