--- a/src/custom-input/custom-input.scss
+++ b/src/custom-input/custom-input.scss
@@ -69,7 +69,7 @@
     .tooltip:hover.pending {
       cursor: default;
 
-      .tooltip:hover.pending .tooltip-wrap {
+      .tooltip-wrap {
         opacity: 0;
         z-index: -1;
       }
